fix: navien_wallpad memory leaks

--- a/components/navien_wallpad/example.yaml
+++ b/components/navien_wallpad/example.yaml
@@ -4,8 +4,8 @@ external_components:
 
 uart:
   id: uart_bus
-  tx_pin: D2
-  rx_pin: D1
+  tx_pin: TX
+  rx_pin: RX
   baud_rate: 9600
   rx_buffer_size: 1024
 
